<resources>
    <string name="app_name">MultiQuiz</string>
    <string name="question_text">Question</string>
    <string name="question_australia">Which is the capital of Australia</string>
    <string name="australia_0_answer">CANBERRA</string>
    <string name="australia_1_answer">BRISBANE</string>
    <string name="australia_2_answer">MELBOURNE</string>
    <string name="australia_3_answer">SYDNEY</string>

    <string name="oceanQuestion">Which is the biggest Ocean?</string>
    <string name="ocean_0_answer">Indian</string>
    <string name="ocean_1_answer">Pacific</string>
    <string name="ocean_2_answer">Arctic</string>
    <string name="ocean_3_answer">Atlantic</string>

    <string name="landSizeQuestion">Which is the biggest land of the world?</string>
    <string name="landSize_0_answer">Africa</string>
    <string name="landSize_1_answer">America</string>
    <string name="landSize_2_answer">Asia</string>
    <string name="landSize_3_answer">Europe</string>

    <string name="richestQuestion">Who is the richest person int the world(2022)?</string>
    <string name="richest_0_answer">Jeff Bezos</string>
    <string name="richest_1_answer">Bill Gates</string>
    <string name="richest_2_answer">Larry Page</string>
    <string name="richest_3_answer">Elon Musk</string>

    <string name="hint_button">HINT</string>
    <string name="submit_button">SUBMIT</string>

    <string name="correct_info">Correct!</string>
    <string name="incorrect_info">Incorrect!</string>

    <string name="results_header">Results</string>
    <string name="correct_answers">Correct Answers:</string>
    <string name="submitted_answers">Submitted Answers: </string>
    <string name="hints_used">Hints Used:</string>
    <string name="reset_all">Reset All</string>
</resources>