<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="8dp"
              android:gravity="center|center_horizontal"
              android:orientation="vertical">


    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3" />

    <TextView
            android:id="@+id/results_header_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/results_header"
            android:textSize="24sp"
            android:textStyle="bold" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/correct_answers_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/correct_answers" />

            <TextView
                    android:id="@+id/correct_answers_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="8" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/submitted_answers_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/submitted_answers" />

            <TextView
                    android:id="@+id/submitted_answers_value"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal"
                    android:text="8" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/hints_used_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/hints_used" />

            <TextView
                    android:id="@+id/hints_used_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8" />
        </LinearLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <Button
                android:id="@+id/reset_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_all" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>